--- a/roles/openvpn-server/tasks/main.yml
+++ b/roles/openvpn-server/tasks/main.yml
@@ -1,6 +1,6 @@
 #!/usr/bin/env ansible-playbook
 - name: Install OpenVPN Server packages 
-  apt: pkg={{ item }} state=installed udpate_cache=yes
+  apt: pkg={{ item }} state=installed update_cache=yes
   with_items: 
      - openvpn
      - easy-rsa
