added easy-rsa setup

--- a/roles/openvpn-server/tasks/main.yml
+++ b/roles/openvpn-server/tasks/main.yml
@@ -11,6 +11,15 @@
 - name: Enable IPv4 traffic forwarding - (/proc/sys/net/ipv4/ip_forward)
   command: echo 1 > /proc/sys/net/ipv4/ip_forward
 
+- name: Copy easy-rsa files to OpenVPN directory
+  copy: src=/usr/share/easy-rsa/ dest=/etc/openvpn
+
+- name: Create directory 
+  file: path=/etc/openvpn/easy-rsa/keys state=directory
+
+- name: Copy easy-rsa vars file
+  template: src=vars.j2 dest=/etc/openvpn/easy-rsa/vars  
+
 #- name: Generate the RSA keys
 #  command: openssl genrsa -out {{ item }}.key {{ openvpn_key_size }} creates={{ item }}.key
 ##           chdir={{ openvpn_path }}
