--- a/roles/openvpn-server/vars/main.yml
+++ b/roles/openvpn-server/vars/main.yml
@@ -1,7 +1,8 @@
-openvpn_key_country:  "USA"
+openvpn_key_country:  "US"
 openvpn_key_city: "NY"
 openvpn_key_org: "Hamlet Batista LLC"
 openvpn_key_ou: "DevOps At Work LTD"
+openvpn_email: "vladimir@hamletbatista.com"
 openvpn_days_valid: "1825"
 openssl_request_subject: "/C={{ openvpn_key_country }}/ST={{ openvpn_key_province }}/L={{ openvpn_key_city }}/O={{ openvpn_key_org }}/OU={{ openvpn_key_ou }}"
 openvpn_key_size: "2048"
