--- a/roles/openvpn-server/tasks/main.yml
+++ b/roles/openvpn-server/tasks/main.yml
@@ -12,7 +12,7 @@
   command: echo 1 > /proc/sys/net/ipv4/ip_forward
 
 - name: Copy easy-rsa files to OpenVPN directory
-  copy: src=/usr/share/easy-rsa/ dest=/etc/openvpn
+  copy: src=/usr/share/easy-rsa/ dest=/etc/openvpn/easy-rsa
 
 - name: Create directory 
   file: path=/etc/openvpn/easy-rsa/keys state=directory
