--- a/roles/openvpn-server/tasks/main.yml
+++ b/roles/openvpn-server/tasks/main.yml
@@ -12,7 +12,7 @@
   command: echo 1 > /proc/sys/net/ipv4/ip_forward
 
 - name: Copy easy-rsa files to OpenVPN directory
-  synchronize: mode=pull src=/usr/share/easy-rsa/ dest=/etc/openvpn 
+  synchronize: mode=pull src=/usr/share/easy-rsa dest=/etc/openvpn/
 
 - name: Create directory 
   file: path=/etc/openvpn/easy-rsa/keys state=directory
@@ -22,6 +22,8 @@
 
 - name: Create DH key
   command: openssl dhparam -out /etc/openvpn/dh2048.pem 2048
+
+#- name: Create CA
 
 
 #- name: Generate the RSA keys
