--- a/roles/openvpn-server/vars/main.yml
+++ b/roles/openvpn-server/vars/main.yml
@@ -15,4 +15,4 @@ openvpn_hmac_firewall: "{{ openvpn_path }}/ta.key"
 openvpn_server: "openvpn.ranksense.net"
 openvpn_port: "1194"
 openvpn_protocol: "udp"
-easy_rsa_ca_dir: "/etc/openvpn/easy-rsa/keys"
+openvpn_rsa_ca_dir: "/etc/openvpn/easy-rsa/keys"
