--- a/roles/openvpn-server/tasks/main.yml
+++ b/roles/openvpn-server/tasks/main.yml
@@ -43,7 +43,7 @@
   tags: easy_rsa
 
 - name: Generate CRL file
-  shell: '. ./vars; $OPENSSL ca -gencrl -out {{ easy_rsa_ca_dir }}/crl.pem -config "$KEY_CONFIG"'
+  shell: '. ./vars; $OPENSSL ca -gencrl -out {{ openvpn_rsa_ca_dir }}/crl.pem -config "$KEY_CONFIG"'
   environment:
     KEY_CN: ""
     KEY_OU: ""
@@ -51,7 +51,7 @@
     KEY_ALTNAMES: ""
   args:
     chdir: "{{ openvpn_easy_rsa_dir }}"
-    creates: "{{ easy_rsa_key_dir }}/crl.pem"
+    creates: "{{ openvpn_rsa_ca_dir }}/crl.pem"
   tags: easy_rsa
 
 #- name: Generate client certificates and keys
