--- a/roles/openvpn-server/vars/main.yml
+++ b/roles/openvpn-server/vars/main.yml
@@ -14,6 +14,6 @@ openvpn_dhparam: "{{ openvpn_path }}/dh{{ openvpn_key_size }}.pem"
 openvpn_hmac_firewall: "{{ openvpn_path }}/ta.key"
 openvpn_server: "openvpn.ranksense.net"
 openvpn_port: "1194"
-openvpn_protocol: "udp"
+openvpn_protocol: "tcp"
 openvpn_easy_rsa_dir: "/etc/openvpn/easy-rsa"
 openvpn_rsa_ca_dir: "/etc/openvpn/easy-rsa/keys"
