--- a/roles/openvpn-server/tasks/main.yml
+++ b/roles/openvpn-server/tasks/main.yml
@@ -52,9 +52,24 @@
     creates: "{{ openvpn_rsa_ca_dir }}/{{ openvpn_server }}.key"
   tags: easy_rsa
 
+- name: Copy Server ca.crt to the main directory
+  copy: src={{ openvpn_rsa_ca_dir }}/ca.crt dest={{ openvpn_path }}
+  tags: easy_rsa
+
+- name: Copy Server certificates to the main directory
+  copy: src={{ openvpn_rsa_ca_dir }}/{{ openvpn_server }}.crt dest={{ openvpn_path }}
+
+- name: Copy Server certificates to the main directory
+  copy: src={{ openvpn_rsa_ca_dir }}/{{ openvpn_server }}.key dest={{ openvpn_path }}
+  tags: easy_rsa
+
+- name: Start OpenVPN server
+  service: name=openvpn state=started
+
 - name: Generate client certificates and keys
   shell: ". ./vars; ./pkitool {{ item }} >/dev/null"
   args:
     chdir: "{{ openvpn_easy_rsa_dir }}"
-    creates: "{{ openvpn_rsa_ca_dir }}/client.key"
+    creates: "{{ openvpn_rsa_ca_dir }}/{{ item}}.key"
+  with_items: "{{ openvpn_clients }}"  
   tags: easy_rsa
