--- a/roles/openvpn-server/vars/main.yml
+++ b/roles/openvpn-server/vars/main.yml
@@ -1,8 +1,8 @@
-openvpn_key_country:  "US"
-openvpn_key_city: "NY"
-openvpn_key_org: "Hamlet Batista LLC"
+openvpn_key_country:  ""
+openvpn_key_city: ""
+openvpn_key_org: ""
 openvpn_key_ou: "DevOps At Work LTD"
-openvpn_email: "vladimir@hamletbatista.com"
+openvpn_email: ""
 openvpn_days_valid: "1825"
 openssl_request_subject: "/C={{ openvpn_key_country }}/ST={{ openvpn_key_province }}/L={{ openvpn_key_city }}/O={{ openvpn_key_org }}/OU={{ openvpn_key_ou }}"
 openvpn_key_size: "2048"
@@ -12,7 +12,7 @@ openvpn_path: "/etc/openvpn"
 openvpn_ca: "{{ openvpn_path }}/ca"
 openvpn_dhparam: "{{ openvpn_path }}/dh{{ openvpn_key_size }}.pem"
 openvpn_hmac_firewall: "{{ openvpn_path }}/ta.key"
-openvpn_server: "openvpn.ranksense.net"
+openvpn_server: ""
 openvpn_port: "1194"
 openvpn_protocol: "tcp"
 openvpn_easy_rsa_dir: "/etc/openvpn/easy-rsa"
